--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -1,12 +1,23 @@
 *{
   margin: 0;
   padding: 0;
+  background: #f5f5f5;
 }
 
 .App {
   height: 100vh;
-  background: whitesmoke;
   padding-top: 1px;
+}
+
+.title{
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-style:italic;
+    display: flex;
+    height: 100px;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 3px solid #e4e2e2 ;
+
 }
 
 .container {
