--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -9,28 +9,68 @@
   padding-top: 1px;
 }
 
-.title{
+.title-container{
     font-family:Georgia, 'Times New Roman', Times, serif;
-    font-style:italic;
     display: flex;
+    min-width: 600px;
     height: 100px;
+    padding-bottom: 10px;
     justify-content: center;
     align-items: center;
     border-bottom: 3px solid #e4e2e2 ;
+    margin: 0 auto;
+}
 
+.help-text{
+  font-size: 13px;
+  margin: 3px auto;
+  font-style: oblique;
+  color: #a1a0a0;
+  font-weight: lighter;
+}
+.title {
+  padding: 9px 15px;
+  background: #f5f5f5;
+  border: 3px solid #e4e2e2 ;
+  margin: auto 50px;
+  cursor: pointer;
+  
+}
+
+.title:hover {
+  background: #e9e7e7 ;
+}
+.score {
+  font-size: 50px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #b6b4b4 ;
+}
+
+.round-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 600px;
+  height: 60px;
+  font-weight: bolder;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 25px;
 }
 
 .container {
-  margin: 130px auto;
+  margin: 10px auto;
+  margin-bottom: 3px;
   display: grid;
   grid-template-columns: 33% 33% 33%;
   grid-template-rows: 33% 33% 33%;
   width: 600px;
   height: 600px;
+  
 }
 
 .button {
-  background: #c5c3c3;
+  background:  #c5c3c3;
   min-width: 100px;
   min-height: 100px;
   display: flex;
@@ -39,9 +79,57 @@
   font-size: 50px;
   cursor: pointer;
   margin: 0.5px;
+  transition: 0.6s ease;
 }
 
 .button:hover {
   background: #dcdada;
   
 }
+
+.reset-button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 35px;
+
+  margin: 0 auto;
+  width: 600px;
+}
+
+.reset {
+  cursor: pointer;
+  font-size: 40px;
+}
+
+.reset:hover {
+  border-radius: 5px;
+  background-color: #e6e2e2;
+}
+.winner-container{
+ background-color:  transparentize($color: #000000, $amount: 0.5);
+ width: 593px;
+  height: 70%;
+  box-shadow: 1px 1px 26px 4px;
+  border-radius: 10px ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  
+}
+
+.winner {
+  padding: 50px;
+  cursor: pointer;
+  background-color:  transparentize($color: #000000, $amount: 0.2);
+  color:#a1a0a0; 
+  border-radius: 40px;
+  font-size: 50px;
+  box-shadow: 1px 1px 26px 4px;
+
+}
+ .winner:hover {
+  background-color:  transparentize($color: #1e1e1e, $amount: 0.2);
+  transition: 1s ease;
+ }
