--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -27,14 +27,24 @@
   font-style: oblique;
   color: #a1a0a0;
   font-weight: lighter;
+  border-radius: 10px;
+  transition: 0.6s ease;
 }
+
+.help-text:hover {
+  background: #a1a0a0;
+  color: #ebe7e7;
+  transition: 0.6s ease;
+  border-radius: 10px;
+}
+
 .title {
   padding: 9px 15px;
   background: #f5f5f5;
   border: 3px solid #e4e2e2 ;
   margin: auto 50px;
   cursor: pointer;
-  
+  transition: 0.6s ease;
 }
 
 .title:hover {
@@ -44,6 +54,11 @@
   font-size: 50px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #b6b4b4 ;
+}
+
+.score:hover {
+  color: #1e1e1e;
+  transition: 0.6s ease;
 }
 
 .round-container{
@@ -102,16 +117,13 @@
   font-size: 40px;
 }
 
-.reset:hover {
-  border-radius: 5px;
-  background-color: #e6e2e2;
-}
+
 .winner-container{
  background-color:  transparentize($color: #000000, $amount: 0.5);
  width: 593px;
-  height: 70%;
+  height: 594px;
   box-shadow: 1px 1px 26px 4px;
-  border-radius: 10px ;
+  
   display: flex;
   justify-content: center;
   align-items: center;
@@ -131,5 +143,5 @@
 }
  .winner:hover {
   background-color:  transparentize($color: #1e1e1e, $amount: 0.2);
-  transition: 1s ease;
+  transition: 0.6s ease;
  }
