--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -145,3 +145,19 @@
   background-color:  transparentize($color: #1e1e1e, $amount: 0.2);
   transition: 0.6s ease;
  }
+
+ .about-container{
+    max-height: 200px;
+    height: 100px;  
+    display: flex;
+    align-items: end;
+    margin-left: 30px;
+ }
+
+ .about-message {
+  margin-left: 20px;
+  font-size: 16px;
+  font-weight: bolder;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  color:#a1a0a0;
+ }
