--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -161,3 +161,41 @@
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   color:#a1a0a0;
  }
+
+ .start-page-container{
+  margin:  auto;
+  height: 70vh;
+  min-width: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+ }
+
+ .choose{
+  box-shadow: 5px 5px 5px -2px;
+  border-radius: 10px;
+  height: 200px;
+  width: 600px;
+  margin: auto 10px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border: 1px solid #e4e2e2 ;
+ }
+
+ .choose-button{
+  box-shadow: 3px 3px 9px -5px;
+  border: 2px solid #e4e2e2 ;
+  padding: 30px;
+  transition: 0.6s ease;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 39px;
+ }
+
+ .choose-button:hover {
+    background-color: #cbcbcb;
+    transition: 0.6s ease;
+    font-size: 31px;
+ }
